--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Index Page</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <h1>Heading 1</h1>
